--- a/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
@@ -1,13 +1,10 @@
-<?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
-<?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.js') ?>
-<?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.ui.js') ?>
 <?php
 $randomId = substr(md5(mt_rand()), 0, 7);
+$this->addJs('/plugins/demo/report/controllers/widgetcontroller/assets/js/widget.data.js');
 ?>
 <?php
 $this->addAssets($this, $widget);
 ?>
-<?php $this->addJs('/plugins/demo/report/controllers/widgetcontroller/assets/js/widget.data.js') ?>
 <?php if ($preview === true) { ?>
     <a class="preview-link" href="../render/<?= $widget->id ?>" style="margin: 0;auto;">View</a>
 <?php } ?>
@@ -16,16 +13,17 @@ $this->addAssets($this, $widget);
             aria-hidden="true">×
     </button>
 <?php } ?>
-<div id="widget-container-<?= $randomId ?>" style="height: 100%;width: 100%;" class="widget-container grid-margin stretch-card"
+<div id="widget-container-<?= $randomId ?>" style="height: 100%;width: 100%;"
+     class="widget-container grid-margin stretch-card"
      data-widget-id="<?= $widget->id ?>">
     <div class="card">
         <div class="card-body">
-            <div class="widget-header d-flex justify-content-between align-items-baseline mb-2">
-                <h6 class="widget-title card-title mb-0"></h6>
-                <div class="widget-toolbar">
-                    <div class="user-toolbar"></div>
+            <div class="widget-header d-flex justify-content-between align-items-baseline mb-2 row">
+                <div class="widget-toolbar col-md-12">
+                    <div class="user-toolbar col-md-12"></div>
                     <div class="default-toolbar"></div>
                 </div>
+                <h6 class="widget-title card-title mb-0 col-md-12"></h6>
                 <div class="text-muted mb-4 widget-description">
 
                 </div>
@@ -63,9 +61,19 @@ $this->addAssets($this, $widget);
 
     .widget-container .widget-header .widget-title {
         font-size: 1.275rem;;
+        width: 100%;
     }
 
-    .widget-container .widget-toolbar {
+    .widget-container .widget-toolbar{
+        width: 100%;
+    }
+
+    .widget-container .widget-toolbar .user-toolbar{
+        width: 100%;
+        margin: -10px 0 10px -18px;
+        display: flex;
+    }
+    .widget-container .widget-toolbar .default-toolbar{
         position: absolute;
         right: 10px;
         top: 5px;
@@ -88,6 +96,16 @@ $this->addAssets($this, $widget);
          }*/
 </style>
 <script>
-    var widget = new engine.report.Widget('<?=$widget->id?>', '<?=$randomId?>');
-    widget.fetchAndRender();
+    <?php
+    $widgetModel = [
+        'template' => $widget->loadTemplate(),
+        'script' => $widget->loadScript(),
+        'name' => $widget->name,
+        'id' => $widget->id,
+        'description' => $widget->description,
+    ];
+    ?>
+    const widget = new engine.report.Widget('<?=$randomId?>');
+    widget.setModel(<?=json_encode($widgetModel)?>);
+    widget.render();
 </script>
