--- a/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
@@ -64,16 +64,17 @@ $this->addAssets($this, $widget);
         width: 100%;
     }
 
-    .widget-container .widget-toolbar{
+    .widget-container .widget-toolbar {
         width: 100%;
     }
 
-    .widget-container .widget-toolbar .user-toolbar{
+    .widget-container .widget-toolbar .user-toolbar {
         width: 100%;
         margin: -10px 0 10px -18px;
         display: flex;
     }
-    .widget-container .widget-toolbar .default-toolbar{
+
+    .widget-container .widget-toolbar .default-toolbar {
         position: absolute;
         right: 10px;
         top: 5px;
@@ -96,16 +97,6 @@ $this->addAssets($this, $widget);
          }*/
 </style>
 <script>
-    <?php
-    $widgetModel = [
-        'template' => $widget->loadTemplate(),
-        'script' => $widget->loadScript(),
-        'name' => $widget->name,
-        'id' => $widget->id,
-        'description' => $widget->description,
-    ];
-    ?>
-    const widget = new engine.report.Widget('<?=$randomId?>');
-    widget.setModel(<?=json_encode($widgetModel)?>);
-    widget.render();
+    const widget = new engine.report.Widget('<?=$widget->id?>','<?=$randomId?>');
+    widget.fetchAndRender();
 </script>
