--- a/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
@@ -59,6 +59,10 @@ $this->addAssets($this, $widget);
         display: inline;
     }
 
+    .widget-container .widget-header .filter-breadcrumb {
+        padding-left: 0;
+    }
+
     .widget-container .widget-header .widget-title {
         font-size: 1.275rem;;
         width: 100%;
@@ -70,8 +74,7 @@ $this->addAssets($this, $widget);
 
     .widget-container .widget-toolbar .user-toolbar {
         width: 100%;
-        margin: -10px 0 10px -18px;
-        display: flex;
+        padding-right: 15px;
     }
 
     .widget-container .widget-toolbar .default-toolbar {
@@ -97,6 +100,6 @@ $this->addAssets($this, $widget);
          }*/
 </style>
 <script>
-    const widget = new engine.report.Widget('<?=$widget->id?>','<?=$randomId?>');
+    const widget = new engine.report.Widget('<?=$widget->id?>', '<?=$randomId?>');
     widget.fetchAndRender();
 </script>
