--- a/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
@@ -100,6 +100,9 @@ $this->addAssets($this, $widget);
          }*/
 </style>
 <script>
-    const widget = new engine.report.Widget('<?=$widget->id?>', '<?=$randomId?>');
-    widget.fetchAndRender();
+    (function () {
+        let widget = new engine.report.Widget('<?=$widget->id?>', '<?=$randomId?>');
+        widget.setModel(<?=$widget->toJSON()?>);
+        widget.fetchAndRender();
+    })();
 </script>
