--- a/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
+++ b/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
@@ -19,7 +19,7 @@
         <div class="text-muted mb-2 dashboard-description col-md-12">
             <?= $dashboard->description ?>
         </div>
-        <div class="dashboard-breadcrumb col-md-12"></div>
+        <div class="dashboard-breadcrumb col-md-12 pl-0"></div>
     </div>
     <script>
         (function ($) {
