--- a/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
@@ -28,10 +28,15 @@ $this->addAssets($this, $widget);
 
                 </div>
             </div>
-            <div class="widget-body" style="width: 100%; height: 100%;">
+            <div class="widget-body mb-2" style="width: 100%; height: 100%;">
 
             </div>
-            <div class="widget-footer"></div>
+            <div class="widget-footer row">
+                <div class="col-md-9"></div>
+                <div class="col-md-3">
+                    <div class="engine-pagination  d-flex flex-row-reverse"></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
