--- a/www/plugins/demo/core/controllers/eventhandlers/reorder.htm
+++ b/www/plugins/demo/core/controllers/eventhandlers/reorder.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('demo/core/eventhandler') ?>">EventHandler</a></li>
+        <li><a href="<?= Backend::url('demo/core/eventhandlers') ?>">EventHandler</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
